k8s/apply-all.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mathcruncher
  namespace: mathcruncher
  labels:
    app: mathcruncher
spec:
  selector:
    app: mathcruncher
  ports:
    - name: http
      port: 80
      targetPort: 8080
