k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mathcruncher
  namespace: mathcruncher
spec:
  selector: { app: mathcruncher }
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
