k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mathcruncher
  namespace: mathcruncher
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4m
spec:
  ingressClassName: nginx
  rules:
    - host: mathcruncher.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mathcruncher
                port:
                  number: 80
